# postal

./: Cargo.toml  README.md
backend/src/: lib.rs
backend/src/http/: mod.rs
backend/src/sqlite/: mod.rs
src/: main.rs  runner.rs  telemetry.rs
src/app/: mod.rs
src/config/: mod.rs
src/tui/: footer.rs  history_pane.rs  mod.rs  query_pane.rs  response_pane.rs  runner.rs  utils.rs
src/tui/command/: executions.rs  keymaps.rs  mod.rs
src/tui/popup/: delete_history_entry_popup.rs  mod.rs
src/tui/popup/help_popup/: mod.rs
