[package]
name = "postal"
license = "MIT"
authors = ["Joseph Goodsell"]
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
crossterm = "0.27.0"
ratatui = { version = "0.26.3", features = ["all-widgets"] }
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.38.0", features = ["full"] }
tui-textarea = "0.4.0"

[lib]
name = "backend"
path = "backend/src/lib.rs"
